# FirstCmakeProjectWithStaticLib

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  main-def.cpp  main.cpp  readme.txt
scr/: CMakeLists.txt  main.cpp  readme.txt
